First day work Nechols87  92054506+Nechols87@users.noreply.github.com

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TITLE</title>
+    <title>Santa Prep</title>
   </head>
   <body>
+    <h1>Santa Prep</h1>
     <div id="app"></div>
   </body>
 </html>
