--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
   </head>
   <body>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <ul class="lightrope">
       <li></li>
       <li></li>
